Added some html files and updates

--- a/campaign/locations/cities/Tol'Kahtan.html
+++ b/campaign/locations/cities/Tol'Kahtan.html
@@ -67,7 +67,13 @@
     The citizens of Tol'Kahtan, the Children of the Sun, held steadfast to their ancestral heritage, drawing strength from their celestial ties and the wisdom of their pharaoh, known as the Phoenix King. Theirs was a civilization built upon the principles of unity, enlightenment, and reverence for the cosmic forces that shaped their lives.
    </p>
    <p>
-    At the heart of Tol'Kahtan rose Tol'Medith, the awe-inspiring Temple of the Morning Star. This colossal pyramid-like structure, situated just outside the city's boundaries, served as a sacred sanctuary and a symbol of the city's divine connection. Tol'Medith stood as a testament to the collective spirit of the Children of the Sun, a constant reminder of their shared identity and the eternal light that once guided their path.
+    At the heart of Tol'Kahtan rose
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith</a>, the awe-inspiring Temple of the Morning Star. This colossal pyramid-like structure, situated just outside the city's boundaries, served as a sacred sanctuary and a symbol of the city's divine connection.
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith
+    </a>
+    stood as a testament to the collective spirit of the Children of the Sun, a constant reminder of their shared identity and the eternal light that once guided their path.
    </p>
    <p>
     In its prime, Tol'Kahtan flourished as a center of knowledge, art, and communal harmony. The city's streets bustled with life as scholars delved into esoteric wisdom, craftsmen honed their skills to perfection, and the people reveled in the prosperity that their enlightened society bestowed upon them. Tol'Kahtan stood as a shining beacon of civilization, a testament to the heights that mortal endeavors could achieve.
@@ -88,6 +94,142 @@
    </p>
    <p>
     In the hearts of those who hear tales of Tol'Kahtan, a yearning arises—a desire to rediscover the secrets of a lost civilization, to uncover the wisdom and power that once thrived within its walls. The legends of the Phoenix King and the Children of the Sun continue to captivate the imaginations of those who believe in the resilience of forgotten realms and the enduring legacy of ancient civilizations. Tol'Kahtan, the Lost City of the Phoenix King, remains a symbol of the fleeting nature of mortal endeavors and the indomitable spirit that survives even in the face of oblivion. Its name echoes through time, a reminder of a glorious past and the potential for rediscovery, should the tides of destiny ever bring forth those destined to seek its hidden treasures.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Illusory Remnants: Tol'Kahtan in its Splendor
+   </h3>
+   <p class="first-paragraph">
+    In the presence of the mystical Puzzle Box of
+    <a href="../../lore/deities/Zytharoth.html">
+     Zytharoth</a>, Tol'Kahtan, the Lost City of the Phoenix King, undergoes a remarkable transformation, manifesting as a ghostly echo of its former glory. The streets once again bustle with activity, and the majestic structures stand proud, reflecting the splendor of the ancient civilization that once thrived within its walls. However, these manifestations are mere illusions, devoid of life and consciousness, hauntingly playing out scenes from a bygone era. As travelers venture into the illusory realm of Tol'Kahtan, they are enveloped by an ethereal atmosphere, where wisps of forgotten memories mingle with the faint echoes of distant conversations and the distant sounds of bustling activity. The air itself carries a sense of nostalgia, a bittersweet reminder of what once was. The illusory citizens of Tol'Kahtan move about their daily lives, their forms flickering like fading apparitions. They engage in routines that mirror their ancient counterparts, going about their tasks with purpose, yet lacking the spark of true existence. These soulless illusions cannot be interacted with or reasoned with, for they are but fleeting echoes trapped in an eternal memory of past events.
+   </p>
+   <p>
+    While the illusory Tol'Kahtan exudes a captivating beauty, there is an underlying melancholy that pervades the atmosphere. The city appears frozen in progress, forever caught in a spectral dance of its former grandeur, yet eternally denied the vibrancy and life it once possessed. Shadows play tricks on the eye, casting fleeting glimpses of what once was, only to fade away into memories. Within the illusory city, fragments of knowledge are scattered, waiting to be discovered. Journals, notes, and cryptic inscriptions reveal tantalizing clues and hidden information about accessing
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith</a>, the sacred Temple of the Morning Star, where the coveted Puzzle Box conceals itself. These writings offer glimpses into the wisdom and secrets that once thrived within the city's walls, guiding determined adventurers on their quest for enlightenment.
+   </p>
+   <p>
+    Explorers traversing the illusory Tol'Kahtan may find themselves torn between awe and trepidation. The city's illusory beauty is juxtaposed by the haunting emptiness that pervades its essence. It serves as a reminder of the ephemeral nature of existence and the fragility of once-great civilizations. As travelers walk its spectral streets and witness its spectral inhabitants, they are reminded of the preciousness of history and the enduring legacy of those who came before. Tol'Kahtan, in its illusory state, becomes a tapestry of memories and echoes, urging those who dare to seek the Puzzle Box's secrets to decipher the riddles of the past and navigate the path to
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith</a>, where the true nature of the city's legacy awaits.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Hidden Enclaves: Unveiling Secrets in Tol'Kahtan's Illusion
+   </h3>
+   <p class="first-paragraph">
+    Amidst the illusory splendor of Tol'Kahtan, there exist hidden enclaves, tucked away from the spectral streets and veiled within the ethereal tapestry of the city. These secret places hold fragments of knowledge and offer adventurers a chance to unearth the secrets necessary to access
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith</a>, the sacred Temple of the Morning Star.
+   </p>
+   <h4>
+    The Whispering Library
+   </h4>
+   <p class="subsection">
+    Deep within the heart of Tol'Kahtan lies a hidden chamber, known as the Whispering Library. This secluded haven is adorned with shelves upon shelves of ancient tomes and scrolls, their pages filled with the accumulated wisdom of the Children of the Sun. While the illusory spirits wander the city, they hold within them fragments of memories and forgotten lore. By engaging with these ethereal apparitions in the Whispering Library, adventurers can glean valuable insights, whispers of clues that may point them towards the hidden paths and mechanisms that unlock the entrance to
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith
+    </a>
+    .
+   </p>
+   <h4>
+    The Hall of Reflections
+   </h4>
+   <p class="subsection">
+    Located within the central square of Tol'Kahtan, concealed behind an intricately carved door, lies the Hall of Reflections. Within this chamber, mirrors adorn the walls, each reflecting a distorted image of the illusory city. These enchanted mirrors hold a connection to the past, showcasing scenes from Tol'Kahtan's golden age. By carefully observing the reflections and deciphering the hidden symbolism, adventurers can unveil cryptic messages and unveil the hidden pathways that lead deeper into the temple complex.
+   </p>
+   <h4>
+    The Songstone Grotto
+   </h4>
+   <p class="subsection">
+    Tucked away beneath the cascading waterfalls that surround Tol'Kahtan, lies a hidden grotto known as the Songstone Grotto. Within this serene sanctuary, crystalline formations emit a soft, melodic hum, resonating with the echoes of ancient songs. The illusory spirits, drawn to the soothing vibrations, are known to share fragments of their past through wordless melodies and spectral dances. Adventurers who immerse themselves in the harmonies of the Songstone Grotto may find themselves unlocking long-forgotten verses that hold the key to understanding the mechanisms of
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith
+    </a>
+    's entrance.
+   </p>
+   <h4>
+    The Vault of Echoes
+   </h4>
+   <p class="subsection">
+    Deep beneath the main center of Tol'Kahtan, accessible through a hidden passageway, lies the enigmatic Vault of Echoes. This subterranean chamber is lined with ornate tapestries that depict pivotal moments in Tol'Kahtan's history. The illusory spirits, frozen in their eternal performances, hold within them echoes of the past. Adventurers who navigate the intricate patterns of the tapestries and decipher the symbolic language woven into the fabric may unlock insights into the nature of the Puzzle Box of
+    <a href="../../lore/deities/Zytharoth.html">
+     Zytharoth
+    </a>
+    and the location of its concealed resting place.
+   </p>
+   <p class="first-paragraph">
+    These hidden enclaves, scattered throughout the illusory city, provide intrepid adventurers with opportunities to interact with the spectral inhabitants of Tol'Kahtan, drawing out fragments of knowledge and unraveling the secrets that guard the path to
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith
+    </a>
+    . By engaging with the illusory spirits, deciphering symbolic clues, and harmonizing with the ancient echoes, explorers may gradually piece together the puzzle of accessing the sacred temple and uncover the means to awaken its dormant power.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    The Keeper's Legacy: Unveiling the Key to
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith
+    </a>
+   </h3>
+   <p class="first-paragraph">
+    Within the solemn confines of the graveyard in Tol'Kahtan lies a mysterious structure, veiled in an air of reverence and remembrance. This large mausoleum serves as the final resting place for the esteemed keepers who devoted their lives to safeguarding the ancient secrets of the city. Unbeknownst to most, the key to accessing
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith</a>, the sacred Temple of the Morning Star, lies hidden within the very essence of these keepers themselves.
+   </p>
+   <h4>
+    The Crystalline Symbol
+   </h4>
+   <p class="subsection">
+    Imbued with the responsibility of protecting Tol'Kahtan's sacred knowledge, each keeper underwent a profound ritual. As part of their training and initiation, a crystalline symbol was burned or imbued into their forehead, marking them as the chosen guardians of the city's secrets. These symbols, intricate and luminescent, served as a testament to their dedication and bound them to the legacy of their predecessors. Unbeknownst to the party initially, it is through this symbol that the key to accessing
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith
+    </a>
+    is revealed.
+   </p>
+   <h4>
+    The Keeper's Grave
+   </h4>
+   <p class="subsection">
+    Deep within the graveyard structure, a chamber awaits discovery. This chamber houses the resting places of the past keepers, their sarcophagi adorned with ornate carvings and inscriptions that depict their storied histories. Within this sacred space, a profound connection lingers. It is said that by tracing the lineage of the keepers and unraveling the tales told through the epitaphs, adventurers can uncover clues that guide them towards the realization that the key lies with the keeper himself.
+   </p>
+   <h4>
+    The Platform of Ascendance
+   </h4>
+   <p class="subsection">
+    Once the party has acquired the crystalline symbol from a past keeper or perhaps discovered their own latent connection to the legacy, they will find themselves standing before a seemingly unassuming platform within the graveyard structure. This platform, infused with ancient magic, serves as a conduit between the world of the living and the hidden tunnels beneath Tol'Kahtan. Stepping upon it with the symbol in their possession, adventurers will be transported to the network of tunnels that lead directly to the hallowed halls of
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith
+    </a>
+    .
+   </p>
+   <h4>
+    The Whispers of the Keeper
+   </h4>
+   <p class="subsection">
+    As the party traverses the tunnels beneath the city, they may find themselves enveloped in a faint ethereal mist, resonating with echoes of the past. In this spectral realm, fragmented whispers float on the air, carrying fragments of the keepers' wisdom. The cryptic messages, spoken by long-forgotten voices, offer cryptic guidance and reveal further insights into the nature of the Puzzle Box of
+    <a href="../../lore/deities/Zytharoth.html">
+     Zytharoth
+    </a>
+    and the true purpose of their journey. It is through the symbiotic connection with the keepers that the adventurers can uncover the hidden truths and unlock the full potential of their quest.
+   </p>
+   <p class="first-paragraph">
+    The keeper's legacy is a profound testament to their dedication and the pivotal role they play in accessing
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith
+    </a>
+    . By delving into the secrets of the mausoleum, discovering the crystalline symbol, and traversing the tunnels beneath Tol'Kahtan, adventurers can unlock the ancient power that lies dormant within the temple. Through the whispers of the keepers and the guidance bestowed upon them, the party embarks on a journey that intertwines their fate with the legacy of those who came before, uncovering the true nature of the Puzzle Box and the path that leads to its awakening within
+    <a href="../landmarks/Tol'Medith.html">
+     Tol'Medith
+    </a>
+    's sacred confines.
    </p>
   </div>
   <hr/>
