--- a/campaign/locations/cities/Vifavea/Vifavea.html
+++ b/campaign/locations/cities/Vifavea/Vifavea.html
@@ -511,25 +511,16 @@
    <p>
     <ul>
      <li>
-      <a href="../../../items/consumables/food/Nectarine_Melon.html">
-       Nectarine Melon
-      </a>
-      : These succulent fruits, resembling a fusion of nectarines and melons, are renowned for their exquisite flavor and refreshing sweetness. Their vibrant orange flesh and juicy texture make them a soughtafter delicacy in the region.
+      Nectarine Melons: These succulent fruits, resembling a fusion of nectarines and melons, are renowned for their exquisite flavor and refreshing sweetness. Their vibrant orange flesh and juicy texture make them a soughtafter delicacy in the region.
      </li>
      <li>
-      <a href="../../../items/consumables/food/Sea_Spray_Pepper.html">
-       Sea Spray Pepper
-      </a>
-      : Grown in the bracing coastal air, these peppers develop a distinctive zesty flavor and an extra hint of natural saltiness. Their vibrant colors range from fiery red to vibrant orange, adding a delightful kick to culinary creations.
+      Sea Spray Peppers: Grown in the bracing coastal air, these peppers develop a distinctive zesty flavor and an extra hint of natural saltiness. Their vibrant colors range from fiery red to vibrant orange, adding a delightful kick to culinary creations.
      </li>
      <li>
       Coastal Cornucopia: A unique blend of tropical and temperate crops, the Coastal Cornucopia is a medley of exotic fruits and vegetables. It includes starfruit, passionfruit, dragonfruit, and heirloom tomatoes, creating a vibrant and diverse assortment of flavors and colors.
      </li>
      <li>
-      <a href="../../../items/consumables/food/Brineleaf_Greens.html">
-       Brineleaf Greens
-      </a>
-      : Thriving in the mineralrich soils near the shoreline,
+      Brineleaf Greens: Thriving in the mineralrich soils near the shoreline,
       <a href="../../../items/consumables/food/Brineleaf_Greens.html">
        Brineleaf Greens
       </a>
@@ -542,35 +533,23 @@
       Shellfish Haven: The Sea Breeze District is known for its thriving shellfish farms, cultivating an array of delicacies such as plump oysters, sweet scallops, and succulent mussels. These bountiful treasures of the sea are savored both locally and exported to neighboring regions.
      </li>
      <li>
-      <a href="../../../items/consumables/food/Cloudberry_Honey.html">
-       Cloudberry Honey
-      </a>
-      : Among the vibrant array of crops, the bees of the Sea Breeze District produce a distinct golden honey from the nectar of cloudberry blossoms. This exquisite honey exhibits a unique floral sweetness and delicate fruity notes, beloved by locals and visitors alike.
+      Cloudberry Honey: Among the vibrant array of crops, the bees of the Sea Breeze District produce a distinct golden honey from the nectar of cloudberry blossoms. This exquisite honey exhibits a unique floral sweetness and delicate fruity notes, beloved by locals and visitors alike.
      </li>
      <li>
       Coastal Livestock: In addition to crops, the farmers rear special livestock that thrives in the cool coastal climate. The district is home to the Mozedd Peninsula Lamb (Peni Lambs), known for its tender meat with a hint of the sea in its flavor. The freeranging coastal hens lay eggs with rich, golden yolks, prized for their exceptional taste.
      </li>
      <li>
-      <a href="../../../items/consumables/food/Lumiberry.html">
-       Lumiberry
-      </a>
-      : A radiant and rare fruit that glows softly with a luminous aura, the
+      Lumiberry: A radiant and rare fruit that glows softly with a luminous aura, the
       <a href="../../../items/consumables/food/Lumiberry.html">
        Lumiberry
       </a>
       is a prized local crop of Vifavea. Known for its sweet and tangy flavor, it is said to possess mystical properties and is often used in potions and enchantments by skilled alchemists.
      </li>
      <li>
-      <a href="../../../items/consumables/food/Sunshower_Grape.html">
-       Sunshower Grape
-      </a>
-      : These luscious grapes are renowned for their unique ability to absorb sunlight and store it within their juicy orbs. Bursting with a delightful combination of sweetness and a subtle hint of citrus, they are a favorite among the locals and are often used in making refreshing juices and fine wines.
+      Sunshower Grapes: These luscious grapes are renowned for their unique ability to absorb sunlight and store it within their juicy orbs. Bursting with a delightful combination of sweetness and a subtle hint of citrus, they are a favorite among the locals and are often used in making refreshing juices and fine wines.
      </li>
      <li>
-      <a href="../../../items/consumables/food/Moonlit_Melon.html">
-       Moonlit Melon
-      </a>
-      : These enchanting melons have a captivating exterior, adorned with intricate silver patterns that shimmer like moonlight. Known for their succulent flesh and intoxicating fragrance,
+      Moonlit Melons: These enchanting melons have a captivating exterior, adorned with intricate silver patterns that shimmer like moonlight. Known for their succulent flesh and intoxicating fragrance,
       <a href="../../../items/consumables/food/Moonlit_Melon.html">
        Moonlit Melon
       </a>
@@ -580,20 +559,14 @@
       Breezeleaf Tea Leaves: A fragrant and delicate tea is crafted from the leaves of the Breezeleaf plant, which thrives in the cool coastal climate of Vifavea. When steeped, these leaves release a soothing aroma reminiscent of ocean breezes, creating a calming and revitalizing tea that is cherished by tea connoisseurs.
      </li>
      <li>
-      <a href="../../../items/consumables/food/Serpent's_Tongue_Chili.html">
-       Serpent's Tongue Chili
-      </a>
-      : For those seeking a spicy kick, the
+      Serpent's Tongue Chili: For those seeking a spicy kick, the
       <a href="../../../items/consumables/food/Serpent's_Tongue_Chili.html">
        Serpent's Tongue Chili
       </a>
       is a fiery delight. Named for its unique twisted shape resembling a serpent's tongue, this potent chili pepper adds a burst of heat and flavor to dishes and is a musthave ingredient for adventurous culinary enthusiasts.
      </li>
      <li>
-      <a href="../../../items/consumables/food/Starlit_Vanilla_Beans.html">
-       Starlit Vanilla Beans
-      </a>
-      : Grown under the enchanting glow of the starlit skies, these vanilla beans possess a sublime aroma and a rich, creamy flavor. Prized for their exceptional quality,
+      Starlit Vanilla Beans: Grown under the enchanting glow of the starlit skies, these vanilla beans possess a sublime aroma and a rich, creamy flavor. Prized for their exceptional quality,
       <a href="../../../items/consumables/food/Starlit_Vanilla_Beans.html">
        Starlit Vanilla Beans
       </a>
@@ -603,20 +576,14 @@
       Mistveil Herbs: Flourishing in the morning mists that blanket the fields of Vifavea, the Mistveil Herbs are known for their unique blend of flavors and healing properties. From soothing sore throats to relieving stress, these aromatic herbs are valued both for their culinary versatility and their medicinal benefits.
      </li>
      <li>
-      <a href="../../../items/consumables/food/Dawnfruit.html">
-       Dawnfruit
-      </a>
-      : A rare and vibrant fruit that ripens with the first light of the morning, the
+      Dawnfruit: A rare and vibrant fruit that ripens with the first light of the morning, the
       <a href="../../../items/consumables/food/Dawnfruit.html">
        Dawnfruit
       </a>
       is a symbol of new beginnings and prosperity. With its juicy flesh and a subtle blend of sweet and tart flavors, this exquisite fruit is often savored as a special breakfast treat or incorporated into unique culinary creations.
      </li>
      <li>
-      <a href="../../../items/consumables/food/Harmony_Herb.html">
-       Harmony Herb
-      </a>
-      : This aromatic herb, known as the
+      Harmony Herb: This aromatic herb, known as the
       <a href="../../../items/consumables/food/Harmony_Herb.html">
        Harmony Herb</a>, is highly regarded for its ability to balance flavors and enhance the overall harmony of dishes. Whether used in savory stews, refreshing salads, or fragrant soups, its subtle and complex taste adds a touch of culinary finesse to any meal.
      </li>
@@ -719,8 +686,7 @@
       </a>
      </li>
      <li>
-      <a href="https://www.youtube.com/watch?v=9fWeZxI2SDQ
-">
+      <a href="https://www.youtube.com/watch?v=9fWeZxI2SDQ">
        Vanilla Stranglethorn Vale - Music &amp; Ambience (3 hours, World of Warcraft Classic)
       </a>
       <a href="../../../../music/Vanilla_Stranglethorn_Vale__Music_&amp;_Ambience_(3_hours,_World_of_Warcraft_Classic).mp3">
