--- a/campaign/locations/landmarks/index.html
+++ b/campaign/locations/landmarks/index.html
@@ -91,6 +91,11 @@
      </a>
     </li>
     <li>
+     <a href="Tol'Medith.html">
+      Tol'Medith
+     </a>
+    </li>
+    <li>
      <a href="Veil_Of_Whispers.html">
       Veil Of Whispers
      </a>
