--- a/campaign/quests/manastorm_legal_advisors/Manastorm_Legal_Advisors.html
+++ b/campaign/quests/manastorm_legal_advisors/Manastorm_Legal_Advisors.html
@@ -57,8 +57,7 @@
     Summary
    </h3>
    <p class="first-paragraph">
-    <a href="../../characters/non-player/milton_manastorm.html">
-     milton manastorm</a>, a trusted guardian, undertook the crucial task of safeguarding an esteemed ambassador from
+    Milton Manastorm, a trusted guardian, undertook the crucial task of safeguarding an esteemed ambassador from
     <a href="../../locations/regions/Matella/Eldara/Eldara.html">
      Eldara
     </a>
@@ -220,7 +219,11 @@
     </a>
     to the wizard in
     <a href="../../locations/regions/Matella/Bakaria/Bakaria.html">
-     Bakaria</a>, had fallen under the influence of a fanatical cult. Recognizing the significance of the mission, the ambassador devised a plan to ensure the Puzzle box of
+     Bakaria</a>, had fallen under the influence of a fanatical cult -
+    <a href="../../lore/guilds/The_Mistshadows.html">
+     The Mistshadows
+    </a>
+    . Recognizing the significance of the mission, the ambassador devised a plan to ensure the Puzzle box of
     <a href="../../lore/deities/Zytharoth.html">
      Zytharoth
     </a>
@@ -273,7 +276,19 @@
     <a href="../../locations/regions/Matella/Matella.html">
      Matella
     </a>
-    . However, the true origin of these strange occurrences remained a mystery to most, shrouded in uncertainty and speculation. Only a few fanatical cults, who became keenly attuned to the presence of the artifact, sensed its influence and emerged with the singular goal of acquiring the Puzzle Box and releasing the powerful
+    . However, the true origin of these strange occurrences remained a mystery to most, shrouded in uncertainty and speculation. Only a few fanatical cults (primarily
+    <a href="../../lore/guilds/The_Mistshadows.html">
+     The Mistshadows
+    </a>
+    containing the
+    <a href="../../lore/guilds/Mistwarden.html">
+     Mistwarden
+    </a>
+    and
+    <a href="../../lore/guilds/The_Council_of_Shadows.html">
+     The Council of Shadows
+    </a>
+    ), who became keenly attuned to the presence of the artifact, sensed its influence and emerged with the singular goal of acquiring the Puzzle Box and releasing the powerful
     <a href="../../lore/deities/Dreamspawn.html">
      Dreamspawn
     </a>
@@ -345,6 +360,27 @@
      Matella
     </a>
     now rested in the hands of those who would unravel the secrets of the Puzzle Box and confront the fanatical cults before their dark ambitions could be realized.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-image">
+   <h3>
+    Manastorm Legal Adventures Flow Chart
+   </h3>
+   <p>
+    <div class="dnd-image-info">
+     <div class="dnd-image-list">
+      <a href="img/legal_adventures_flow_chart.png">
+       <img alt="Image" src="img/legal_adventures_flow_chart.png"/>
+      </a>
+     </div>
+     <div class="dnd-image-source">
+      Source: Created by Antonius Torode
+     </div>
+     <div class="dnd-image-caption">
+      Caption: A flow chart depicting the events surrounding the start of the manastorm legal adventures.
+     </div>
+    </div>
    </p>
   </div>
   <hr/>
