--- a/campaign/quests/manastorm_legal_advisors/index.html
+++ b/campaign/quests/manastorm_legal_advisors/index.html
@@ -89,6 +89,13 @@
       img/contract (2).jpg
      </a>
     </li>
+    <li>
+     <a class="image-index-link" href="img/legal_adventures_flow_chart.png">
+      <i class="fas fa-camera">
+      </i>
+      img/legal_adventures_flow_chart.png
+     </a>
+    </li>
    </ul>
   </div>
  </body>
