--- a/campaign/quests/manastorm_legal_advisors/img/index.html
+++ b/campaign/quests/manastorm_legal_advisors/img/index.html
@@ -60,6 +60,11 @@
       contract (2).jpg
      </a>
     </li>
+    <li>
+     <a href="legal_adventures_flow_chart.png">
+      legal adventures flow chart.png
+     </a>
+    </li>
    </ul>
   </div>
  </body>
