Reverted last changes and updated some html files

--- a/campaign/index.html
+++ b/campaign/index.html
@@ -127,6 +127,13 @@
       timeline
      </a>
     </li>
+    <li>
+     <a class="dir-index-link" href="vehicles/index.html">
+      <i class="fas fa-folder">
+      </i>
+      vehicles
+     </a>
+    </li>
    </ul>
   </div>
  </body>
