--- a/campaign/puzzles/index.html
+++ b/campaign/puzzles/index.html
@@ -64,6 +64,13 @@
       Halls Of No End
      </a>
     </li>
+    <li>
+     <a class="dir-index-link" href="knight_castle_image/index.html">
+      <i class="fas fa-folder">
+      </i>
+      knight castle image
+     </a>
+    </li>
    </ul>
   </div>
  </body>
