--- a/campaign/puzzles/knight_castle_image/index.html
+++ b/campaign/puzzles/knight_castle_image/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,22 +46,18 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/quests
+   Index of /home/awtorode/git/DnD/campaign/puzzles/knight_castle_image
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a class="dir-index-link" href="manastorm_legal_advisors/index.html">
-      <i class="fas fa-folder">
-      </i>
-      manastorm legal advisors
+     <a href="knight_puzzle_grid.png">
+      knight puzzle grid.png
      </a>
     </li>
     <li>
-     <a class="dir-index-link" href="tinker_zepplin_sabotage/index.html">
-      <i class="fas fa-folder">
-      </i>
-      tinker zepplin sabotage
+     <a href="knight_puzzle_image.jpg">
+      knight puzzle image.jpg
      </a>
     </li>
    </ul>
