--- a/campaign/quests/tinker_zepplin_sabotage/index.html
+++ b/campaign/quests/tinker_zepplin_sabotage/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,22 +46,15 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/quests
+   Index of /home/awtorode/git/DnD/campaign/quests/tinker_zepplin_sabotage
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a class="dir-index-link" href="manastorm_legal_advisors/index.html">
+     <a class="dir-index-link" href="tiles/index.html">
       <i class="fas fa-folder">
       </i>
-      manastorm legal advisors
-     </a>
-    </li>
-    <li>
-     <a class="dir-index-link" href="tinker_zepplin_sabotage/index.html">
-      <i class="fas fa-folder">
-      </i>
-      tinker zepplin sabotage
+      tiles
      </a>
     </li>
    </ul>
