--- a/campaign/vehicles/index.html
+++ b/campaign/vehicles/index.html
@@ -46,22 +46,15 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/quests
+   Index of /home/awtorode/git/DnD/campaign/vehicles
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a class="dir-index-link" href="manastorm_legal_advisors/index.html">
+     <a class="dir-index-link" href="water/index.html">
       <i class="fas fa-folder">
       </i>
-      manastorm legal advisors
-     </a>
-    </li>
-    <li>
-     <a class="dir-index-link" href="tinker_zepplin_sabotage/index.html">
-      <i class="fas fa-folder">
-      </i>
-      tinker zepplin sabotage
+      water
      </a>
     </li>
    </ul>
