--- a/campaign/characters/player/img/index.html
+++ b/campaign/characters/player/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,24 +46,10 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/quests
+   Index of /home/awtorode/git/DnD/campaign/characters/player/img
   </h1>
   <div class="indexLinks">
    <ul>
-    <li>
-     <a class="dir-index-link" href="manastorm_legal_advisors/index.html">
-      <i class="fas fa-folder">
-      </i>
-      manastorm legal advisors
-     </a>
-    </li>
-    <li>
-     <a class="dir-index-link" href="tinker_zepplin_sabotage/index.html">
-      <i class="fas fa-folder">
-      </i>
-      tinker zepplin sabotage
-     </a>
-    </li>
    </ul>
   </div>
  </body>
