--- a/campaign/vehicles/water/index.html
+++ b/campaign/vehicles/water/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,22 +46,38 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/quests
+   Index of /home/awtorode/git/DnD/campaign/vehicles/water
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a class="dir-index-link" href="manastorm_legal_advisors/index.html">
-      <i class="fas fa-folder">
-      </i>
-      manastorm legal advisors
+     <a href="75 x 25 (2nd Rate) Decks.jpg">
+      75 x 25 (2nd Rate) Decks.jpg
      </a>
     </li>
     <li>
-     <a class="dir-index-link" href="tinker_zepplin_sabotage/index.html">
-      <i class="fas fa-folder">
-      </i>
-      tinker zepplin sabotage
+     <a href="PirateFull.jpg">
+      PirateFull.jpg
+     </a>
+    </li>
+    <li>
+     <a href="a_favor_for_stormhands_by_jonpintar_d8xfrav-375w-2x.jpg">
+      a favor for stormhands by jonpintar d8xfrav-375w-2x.jpg
+     </a>
+    </li>
+    <li>
+     <a href="izwry1tp72e11.jpg">
+      izwry1tp72e11.jpg
+     </a>
+    </li>
+    <li>
+     <a href="mp07ia56cug11.jpg">
+      mp07ia56cug11.jpg
+     </a>
+    </li>
+    <li>
+     <a href="pliyp83irgx21.jpg">
+      pliyp83irgx21.jpg
      </a>
     </li>
    </ul>
