--- a/index.html
+++ b/index.html
@@ -51,10 +51,64 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="mmorpdnd.png">
+      mmorpdnd.png
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href=".git/index.html">
+      <i class="fas fa-folder">
+      </i>
+      .git
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href=".github/index.html">
+      <i class="fas fa-folder">
+      </i>
+      .github
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href=".idea/index.html">
+      <i class="fas fa-folder">
+      </i>
+      .idea
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="campaign/index.html">
       <i class="fas fa-folder">
       </i>
       campaign
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="css/index.html">
+      <i class="fas fa-folder">
+      </i>
+      css
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="docs/index.html">
+      <i class="fas fa-folder">
+      </i>
+      docs
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="scripts/index.html">
+      <i class="fas fa-folder">
+      </i>
+      scripts
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="templates/index.html">
+      <i class="fas fa-folder">
+      </i>
+      templates
      </a>
     </li>
    </ul>
