--- a/campaign/creatures/critters/index.html
+++ b/campaign/creatures/critters/index.html
@@ -50,6 +50,39 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Coconatus_Marmotta.html">
+      Coconatus Marmotta
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/coconatus_marmotta (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/coconatus_marmotta (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/coconatus_marmotta (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/coconatus_marmotta (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/coconatus_marmotta (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/coconatus_marmotta (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/coconatus_marmotta (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/coconatus_marmotta (4).jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
