--- a/campaign/items/index.html
+++ b/campaign/items/index.html
@@ -58,6 +58,13 @@
      </a>
     </li>
     <li>
+     <a class="dir-index-link" href="books/index.html">
+      <i class="fas fa-folder">
+      </i>
+      books
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="consumables/index.html">
       <i class="fas fa-folder">
       </i>
@@ -69,6 +76,13 @@
       <i class="fas fa-folder">
       </i>
       devices
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="letters/index.html">
+      <i class="fas fa-folder">
+      </i>
+      letters
      </a>
     </li>
     <li>
