--- a/campaign/items/plants/Bastheti_Palm.html
+++ b/campaign/items/plants/Bastheti_Palm.html
@@ -5,7 +5,7 @@
   <title>
    Bastheti Palm
   </title>
-  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
