--- a/campaign/items/plants/index.html
+++ b/campaign/items/plants/index.html
@@ -50,6 +50,39 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Bastheti_Palm.html">
+      Bastheti Palm
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Bastheti_Palms (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Bastheti_Palms (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Bastheti_Palms (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Bastheti_Palms (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Bastheti_Palms (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Bastheti_Palms (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Bastheti_Palms (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Bastheti_Palms (4).jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
