--- a/campaign/locations/cities/Vifavea/Vifavea.html
+++ b/campaign/locations/cities/Vifavea/Vifavea.html
@@ -366,7 +366,11 @@
     The Artisan's Gallery
    </h4>
    <p class="subsection">
-    Step into the enchanting world of The Artisan's Gallery, owned by the talented Arinwynn Starling. This haven for artisans and craftspeople showcases a stunning array of handcrafted jewelry, intricate woodwork, exquisite tapestries, and other masterpieces of artistic craftsmanship. Immerse yourself in the beauty and creativity of local artisans as you explore this gallery, where each piece tells a unique story and offers the opportunity to find a one-of-a-kind treasure to adorn your home or person.
+    Step into the enchanting world of The Artisan's Gallery, owned by the talented
+    <a href="../../../characters/non-player/arinwynn_starling.html">
+     arinwynn starling
+    </a>
+    . This haven for artisans and craftspeople showcases a stunning array of handcrafted jewelry, intricate woodwork, exquisite tapestries, and other masterpieces of artistic craftsmanship. Immerse yourself in the beauty and creativity of local artisans as you explore this gallery, where each piece tells a unique story and offers the opportunity to find a one-of-a-kind treasure to adorn your home or person.
    </p>
    <h4>
     The Astral Attire
