--- a/campaign/locations/regions/Matella/Daystone_Isle/index.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="Havenholme.html">
+      Havenholme
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/Daystone_Isle.jpg">
       <i class="fas fa-camera">
       </i>
