--- a/campaign/locations/towns/index.html
+++ b/campaign/locations/towns/index.html
@@ -57,6 +57,13 @@
       Dessaquest
      </a>
     </li>
+    <li>
+     <a class="dir-index-link" href="Yellowseed/index.html">
+      <i class="fas fa-folder">
+      </i>
+      Yellowseed
+     </a>
+    </li>
    </ul>
   </div>
  </body>
