--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -86,6 +86,11 @@
      </a>
     </li>
     <li>
+     <a href="arinwynn_starling.html">
+      arinwynn starling
+     </a>
+    </li>
+    <li>
      <a href="arlo_ironheart.html">
       arlo ironheart
      </a>
@@ -356,6 +361,11 @@
      </a>
     </li>
     <li>
+     <a href="riven_darkwire.html">
+      riven darkwire
+     </a>
+    </li>
+    <li>
      <a href="roderick_thornfield.html">
       roderick thornfield
      </a>
@@ -543,6 +553,13 @@
       <i class="fas fa-camera">
       </i>
       img/ariadne_witwood.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/arinwynn_starling.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/arinwynn_starling.jpg
      </a>
     </li>
     <li>
