--- a/campaign/items/letters/index.html
+++ b/campaign/items/letters/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,34 +46,33 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/puzzles
+   Index of /home/awtorode/git/DnD/campaign/items/letters
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="The_Illusionary_Menagerie_Trap.html">
-      The Illusionary Menagerie Trap
+     <a href="Random_Letter_001.html">
+      Random Letter 001
      </a>
     </li>
     <li>
-     <a class="dir-index-link" href="Aethereu/index.html">
-      <i class="fas fa-folder">
-      </i>
-      Aethereu
+     <a href="Random_Letter_002.html">
+      Random Letter 002
      </a>
     </li>
     <li>
-     <a class="dir-index-link" href="Halls_Of_No_End/index.html">
-      <i class="fas fa-folder">
-      </i>
-      Halls Of No End
+     <a href="Random_Letter_003.html">
+      Random Letter 003
      </a>
     </li>
     <li>
-     <a class="dir-index-link" href="knight_castle_image/index.html">
-      <i class="fas fa-folder">
-      </i>
-      knight castle image
+     <a href="Random_Letter_004.html">
+      Random Letter 004
+     </a>
+    </li>
+    <li>
+     <a href="Random_Letter_005.html">
+      Random Letter 005
      </a>
     </li>
    </ul>
