--- a/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
@@ -318,10 +318,15 @@
     The ruling family imposes taxes and collects tributes from the inhabitants of Daystone Isle. The collected revenue contributes to the royal treasury, funding public works, infrastructure projects, and the maintenance of the ruling family's estates. The taxation system ensures a steady source of income for the government, although it can sometimes be perceived as burdensome by the common folk.
    </p>
    <h4>
-    Havenholme Labor
+    <a href="Havenholme.html">
+     Havenholme
+    </a>
+    Labor
    </h4>
    <p class="subsection">
-    Daystone Isle is home to a hidden prison colony called Havenholme, where incarcerated individuals are put to work performing labor and resource extraction. The Daystone royal family profits from this arrangement, utilizing the labor force to harvest resources, such as mining precious minerals, logging timber, or performing other tasks that contribute to their wealth and influence. The prison colony's labor supports various sectors of the economy, adding to the island's overall productivity and profitability.
+    Daystone Isle is home to a hidden prison colony called
+    <a href="Havenholme.html">
+     Havenholme</a>, where incarcerated individuals are put to work performing labor and resource extraction. The Daystone royal family profits from this arrangement, utilizing the labor force to harvest resources, such as mining precious minerals, logging timber, or performing other tasks that contribute to their wealth and influence. The prison colony's labor supports various sectors of the economy, adding to the island's overall productivity and profitability.
    </p>
    <h4>
     Craftsmanship and Artistry
@@ -357,22 +362,40 @@
     Given its strategic coastal location, Daystone Isle offers extensive opportunities for naval travel. The island maintains a bustling port where ships and vessels arrive and depart regularly. Visitors from neighboring provinces and distant lands can reach Daystone Isle via these naval routes, bringing with them goods, trade, and cultural exchanges.
    </p>
    <h4>
-    Havenholme Access
+    <a href="Havenholme.html">
+     Havenholme
+    </a>
+    Access
    </h4>
    <p class="subsection">
-    Havenholme, the prison colony located to the northwest of Daystone Isle, is accessible by boat. Specialized transport vessels, discreetly operated by the Daystone royal family, facilitate transportation to and from the prison colony. These vessels follow secretive routes, ensuring the security and containment of the colony without arousing undue suspicion from outsiders.
+    <a href="Havenholme.html">
+     Havenholme</a>, the prison colony located to the northwest of Daystone Isle, is accessible by boat. Specialized transport vessels, discreetly operated by the Daystone royal family, facilitate transportation to and from the prison colony. These vessels follow secretive routes, ensuring the security and containment of the colony without arousing undue suspicion from outsiders.
    </p>
    <h4>
     Naval Surveillance
    </h4>
    <p class="subsection">
-    To maintain the security and integrity of Havenholme, naval vessels patrol the waters surrounding the prison colony. These vessels, under the discreet command of the Daystone royal family, keep a watchful eye on the area to prevent unauthorized access or escape attempts. While their presence may go unnoticed by the general public, these vessels act as a deterrent to curious individuals and ensure the controlled environment of Havenholme.
+    To maintain the security and integrity of
+    <a href="Havenholme.html">
+     Havenholme</a>, naval vessels patrol the waters surrounding the prison colony. These vessels, under the discreet command of the Daystone royal family, keep a watchful eye on the area to prevent unauthorized access or escape attempts. While their presence may go unnoticed by the general public, these vessels act as a deterrent to curious individuals and ensure the controlled environment of
+    <a href="Havenholme.html">
+     Havenholme
+    </a>
+    .
    </p>
    <h4>
     Visitor Restrictions
    </h4>
    <p class="subsection">
-    Due to the sensitive nature of Havenholme as a prison colony, access to the island is highly restricted. Visitors are not allowed direct access to Havenholme unless they possess proper authorization or have a legitimate reason to visit, such as authorized personnel or official delegations. The naval vessels and security measures in place prevent unauthorized individuals from approaching or interfering with the operations of the prison colony.
+    Due to the sensitive nature of
+    <a href="Havenholme.html">
+     Havenholme
+    </a>
+    as a prison colony, access to the island is highly restricted. Visitors are not allowed direct access to
+    <a href="Havenholme.html">
+     Havenholme
+    </a>
+    unless they possess proper authorization or have a legitimate reason to visit, such as authorized personnel or official delegations. The naval vessels and security measures in place prevent unauthorized individuals from approaching or interfering with the operations of the prison colony.
    </p>
    <h4>
     Local Transportation Services
@@ -381,7 +404,11 @@
     Within Daystone Isle, local transportation services are available to facilitate convenient movement for residents and visitors alike. These include horse-drawn carriages, wagons, and private transportation services that cater to specific needs. Such services allow for easy exploration of the island's attractions, the convenience of reaching markets, and commuting between towns and cities.
    </p>
    <p class="first-paragraph">
-    It is important to note that while the transportation system of Daystone Isle ensures efficient travel and accessibility, certain areas and routes may be subject to restricted access or heightened security measures due to the presence of Havenholme and the Daystone royal family's control over the prison colony.
+    It is important to note that while the transportation system of Daystone Isle ensures efficient travel and accessibility, certain areas and routes may be subject to restricted access or heightened security measures due to the presence of
+    <a href="Havenholme.html">
+     Havenholme
+    </a>
+    and the Daystone royal family's control over the prison colony.
    </p>
   </div>
   <hr/>
@@ -417,10 +444,21 @@
     Given the royal family's prominent position and their control over Daystone Isle, occasional political intrigues and power struggles may arise. These incidents, often confined to the realm of politics and influential circles, are managed internally by the royal family and their advisors to maintain stability and harmony within their domain.
    </p>
    <h4>
-    Havenholme Prison Colony
+    <a href="Havenholme.html">
+     Havenholme
+    </a>
+    Prison Colony
    </h4>
    <p class="subsection">
-    The presence of the Havenholme prison colony off the northwest coast of Daystone Isle adds another layer to the island's crime landscape. While the operations and security measures of Havenholme are discreetly managed by the Daystone royal family, occasional attempts at escape or breaches of security may occur. However, the security forces and specialized personnel dedicated to the prison colony work diligently to prevent such incidents and ensure the containment of prisoners.
+    The presence of the
+    <a href="Havenholme.html">
+     Havenholme
+    </a>
+    prison colony off the northwest coast of Daystone Isle adds another layer to the island's crime landscape. While the operations and security measures of
+    <a href="Havenholme.html">
+     Havenholme
+    </a>
+    are discreetly managed by the Daystone royal family, occasional attempts at escape or breaches of security may occur. However, the security forces and specialized personnel dedicated to the prison colony work diligently to prevent such incidents and ensure the containment of prisoners.
    </p>
    <p class="first-paragraph">
     It is worth noting that the Daystone royal family takes a proactive approach to maintaining law and order within Daystone Isle, swiftly addressing any criminal activities that threaten the well-being of the island's inhabitants. The cooperation between the royal guards, local law enforcement agencies, and the discreet surveillance efforts of the naval vessels ensures that Daystone Isle remains a safe and secure place for residents and visitors alike.
@@ -448,7 +486,10 @@
     Landmarks and Other Features
    </h3>
    <p>
-    Havenholme: A secluded island northwest of Daystone Isle, known for its discreet operations and controlled environment, serving as a prison colony under the jurisdiction of the Daystone royal family.
+    <a href="Havenholme.html">
+     Havenholme
+    </a>
+    : A secluded island northwest of Daystone Isle, known for its discreet operations and controlled environment, serving as a prison colony under the jurisdiction of the Daystone royal family.
    </p>
   </div>
   <hr/>
