--- a/campaign/locations/towns/Yellowseed/img/index.html
+++ b/campaign/locations/towns/Yellowseed/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,34 +46,18 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/puzzles
+   Index of /home/awtorode/git/DnD/campaign/locations/towns/Yellowseed/img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="The_Illusionary_Menagerie_Trap.html">
-      The Illusionary Menagerie Trap
+     <a href="yellowseed_village (1).jpg">
+      yellowseed village (1).jpg
      </a>
     </li>
     <li>
-     <a class="dir-index-link" href="Aethereu/index.html">
-      <i class="fas fa-folder">
-      </i>
-      Aethereu
-     </a>
-    </li>
-    <li>
-     <a class="dir-index-link" href="Halls_Of_No_End/index.html">
-      <i class="fas fa-folder">
-      </i>
-      Halls Of No End
-     </a>
-    </li>
-    <li>
-     <a class="dir-index-link" href="knight_castle_image/index.html">
-      <i class="fas fa-folder">
-      </i>
-      knight castle image
+     <a href="yellowseed_village (2).jpg">
+      yellowseed village (2).jpg
      </a>
     </li>
    </ul>
