Updated some index files

--- a/campaign/locations/cities/Vifavea/Mansion/index.html
+++ b/campaign/locations/cities/Vifavea/Mansion/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,33 +46,13 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/puzzles/Halls_Of_No_End
+   Index of /home/awtorode/git/DnD/campaign/locations/cities/Vifavea/Mansion
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="HONE_v3_printer.png">
-      HONE v3 printer.png
-     </a>
-    </li>
-    <li>
-     <a href="HONE_v3.png">
-      HONE v3.png
-     </a>
-    </li>
-    <li>
-     <a href="HONE-white.jpg">
-      HONE-white.jpg
-     </a>
-    </li>
-    <li>
-     <a href="HONE.jpg">
-      HONE.jpg
-     </a>
-    </li>
-    <li>
-     <a href="HONE.png">
-      HONE.png
+     <a href="The_Mansion_Underground_Rooms.png">
+      The Mansion Underground Rooms.png
      </a>
     </li>
    </ul>
