--- a/campaign/locations/cities/Vifavea/index.html
+++ b/campaign/locations/cities/Vifavea/index.html
@@ -56,6 +56,13 @@
      </a>
     </li>
     <li>
+     <a class="dir-index-link" href="Mansion/index.html">
+      <i class="fas fa-folder">
+      </i>
+      Mansion
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/Vifavea (1).jpg">
       <i class="fas fa-camera">
       </i>
