--- a/campaign/items/plants/Bastheti_Palm.html
+++ b/campaign/items/plants/Bastheti_Palm.html
@@ -82,5 +82,40 @@
    </p>
   </div>
   <hr/>
+  <div class="dnd-info">
+   <h3>
+    Summary
+   </h3>
+   <p class="first-paragraph">
+    Bastheti Palms, the majestic trees adorning much of the coastline in
+    <a href="../../locations/regions/Matella/Eldara/Eldara.html">
+     Eldara</a>, stand tall and proud with their distinct Egyptian allure. These unique palm-like trees possess an enchanting combination of beauty and functionality. With their slender trunks reaching skyward, the Bastheti Palms boast an array of lush fronds that gracefully fan out, creating a verdant canopy overhead.
+   </p>
+   <p>
+    The leaves of the Bastheti Palms exhibit a remarkable feature, as they not only perform photosynthesis to harness energy from sunlight but also serve as efficient heat absorbers. Through a complex biological process, these trees actively extract heat from the surrounding air, offering a cooling effect in the coastal regions of
+    <a href="../../locations/regions/Matella/Eldara/Eldara.html">
+     Eldara
+    </a>
+    . As a result, the coastal settlements and areas often experiences a moderate and pleasant climate, providing respite from the sweltering heat often found in other parts of the province.
+   </p>
+   <p>
+    The Bastheti Palms' name is derived from the ancient Egyptian goddess Bastet, known as the protector of cats, home, and the sun. It is believed that these elegant trees bear a resemblance to the regal and graceful nature of the goddess herself. Locals hold the Bastheti Palms in high regard, not only for their aesthetic charm but also for the invaluable cooling benefits they provide to the inhabitants of the coastline and its immediate surroundings.
+   </p>
+   <p>
+    The
+    <a href="../../locations/regions/Matella/Eldara/Eldara.html">
+     Eldara
+    </a>
+    coast has become synonymous with the beauty of the Bastheti Palms, as they lend an exotic touch to the landscape. Tourists and residents alike find solace and tranquility beneath the shade of these magnificent trees, seeking refuge from the tropical sun. The rustling sound of their fronds in the gentle coastal breeze creates a soothing melody that resonates throughout the region.
+   </p>
+   <p>
+    As guardians of the coastline, the Bastheti Palms embody the symbiotic relationship between nature and the people of
+    <a href="../../locations/regions/Matella/Eldara/Eldara.html">
+     Eldara
+    </a>
+    . They stand as a testament to the unique ecosystem of the Mozedd Peninsula, offering both aesthetic grandeur and practical respite from the heat, truly making them an integral part of the region's identity.
+   </p>
+  </div>
+  <hr/>
  </body>
 </html>
