--- a/campaign/puzzles/Halls_Of_No_End/img/index.html
+++ b/campaign/puzzles/Halls_Of_No_End/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,42 +46,18 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/puzzles/Halls_Of_No_End
+   Index of /home/awtorode/git/DnD/campaign/puzzles/Halls_Of_No_End/img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="HONE_v3_printer.png">
-      HONE v3 printer.png
+     <a href="HONE_v3.png">
+      HONE v3.png
      </a>
     </li>
     <li>
-     <a href="HONE-white.jpg">
-      HONE-white.jpg
-     </a>
-    </li>
-    <li>
-     <a href="HONE.png">
-      HONE.png
-     </a>
-    </li>
-    <li>
-     <a href="Halls_Of_No_End.html">
-      Halls Of No End
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/HONE.jpg">
-      <i class="fas fa-camera">
-      </i>
-      img/HONE.jpg
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/HONE_v3.png">
-      <i class="fas fa-camera">
-      </i>
-      img/HONE_v3.png
+     <a href="HONE.jpg">
+      HONE.jpg
      </a>
     </li>
    </ul>
